# Cpp-playground

./: CMakeLists.txt  README.md  enum-class-iteration.cpp  enum-class-iteration.h  main.cpp
data/: CMakeLists.txt
src/: CMakeLists.txt  convert-ASCII-OFF-to-binary-OFF.cpp  convert-ASCII-OFF-to-binary-OFF.h  convert-ASCII-OFF-to-binary-OFF.hpp  convert-ASCII-OFF-to-binary-PLY.cpp  convert-ASCII-OFF-to-binary-PLY.h  convert-ASCII-OFF-to-binary-PLY.hpp  convert-ASCII-PLY-to-binary-PLY.cpp  convert-ASCII-PLY-to-binary-PLY.h  convert-ASCII-PLY-to-binary-PLY.hpp  convert-binary-OFF-to-binary-PLY.cpp  convert-binary-OFF-to-binary-PLY.h  convert-binary-OFF-to-binary-PLY.hpp  convert-binary-PLY-to-ASCII-OFF.cpp  convert-binary-PLY-to-ASCII-OFF.h  convert-binary-PLY-to-ASCII-OFF.hpp  convert-off-to-ply.cpp  convert-off-to-ply.h  encode-decode.cpp  encode-decode.h  encode-decode.hpp  enum-class-iteration++.cpp  enum-class-iteration++.h  enum-class-iteration+.cpp  enum-class-iteration+.h  enum-class-iteration.cpp  enum-class-iteration.h  main.cpp  spy.cpp  spy.h  spy.hpp
